# gocode

./: .envrc  .gitignore  BUILD.bazel  WORKSPACE  deps.bzl  go.mod  nogo_config.json
cmd/hello/: BUILD.bazel  main.go
pkg/examples/hello/: BUILD.bazel  server.go
pkg/examples/hello/handlers/greeter/: BUILD.bazel
pkg/examples/hello/handlers/health/: BUILD.bazel  health.go
pkg/examples/hello/handlers/terminator/: BUILD.bazel
pkg/logging/loggerfx/: BUILD.bazel
pkg/net/httpserver/: BUILD.bazel  httpserver.go
pkg/net/httpserver/handlers/health/: BUILD.bazel
pkg/net/httpserver/handlers/terminator/: BUILD.bazel
