# gazelle:prefix github.com/tellett/gocode

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@io_bazel_rules_go//go:def.bzl", "TOOLS_NOGO", "nogo")

gazelle(
    name = "gazelle",
    command = "fix",
)

gazelle(
    name = "gazelle-diff",
    command = "fix",
    mode = "diff",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

buildifier(name = "buildifier")

# source: https://sourcegraph.com/github.com/kubernetes/test-infra/-/blob/BUILD.bazel
nogo(
    name = "nogo_vet",
    config = "nogo_config.json",
    visibility = ["//visibility:public"],
    # These deps enable the analyses equivalent to running `go vet`.
    # Passing vet = True enables only a tiny subset of these (the ones
    # that are always correct).
    # You can see the what `go vet` does by running `go doc cmd/vet`.
    deps = TOOLS_NOGO,
)
