load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "hello_lib",
    srcs = ["main.go"],
    importpath = "github.com/tellett/gocode/cmd/hello",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "hello",
    embed = [":hello_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "hello_world_docker",
    binary = ":hello",
)
