load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "hello",
    srcs = ["server.go"],
    importpath = "github.com/tellett/gocode/pkg/examples/hello",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/examples/hello/handlers/greeter",
        "//pkg/net/httpserver",
        "@org_uber_go_fx//:fx",
    ],
)
