load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "log",
    srcs = ["loggerfx.go"],
    importpath = "github.com/tellett/gocode/pkg/log",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_fx//:fx",
        "@org_uber_go_zap//:zap",
    ],
)

go_library(
    name = "loggerfx",
    srcs = ["loggerfx.go"],
    importpath = "github.com/tellett/gocode/pkg/logging/loggerfx",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_fx//:fx",
        "@org_uber_go_zap//:zap",
    ],
)
