load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "health",
    srcs = ["health.go"],
    importpath = "github.com/tellett/gocode/pkg/examples/hello/handlers/health",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_fx//:fx",
        "@org_uber_go_zap//:zap",
    ],
)
