load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "terminator",
    srcs = ["terminator.go"],
    importpath = "github.com/tellett/gocode/pkg/net/httpserver/handlers/terminator",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_fx//:fx",
        "@org_uber_go_zap//:zap",
    ],
)
